--- a/app/views/public/coordinates/index.html.erb
+++ b/app/views/public/coordinates/index.html.erb
@@ -31,8 +31,8 @@
             </div>
             <div>
               <% if user_signed_in? %>
-                <%= link_to coordinate.user.name, user_path(coordinate.user) %><br>
-                <%= link_to coordinate.style_i18n %>
+                <%= link_to coordinate.user.name, coordinates_path(user_id: coordinate.user.id) %><br>
+                <%= link_to coordinate.style_i18n, coordinates_path(style: coordinate.style) %>
               <% elsif admin_signed_in? %>
                 <%= link_to coordinate.user.name, admin_user_path(coordinate.user) %>
               <% end %>
