--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -33,7 +33,7 @@
           <%= link_to "全ての投稿を見る>", posts_user_path(@user) %>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <% @coordinates.each do |coordinate| %>
           <div class="col-4">
             <%= link_to coordinate_path(coordinate) do %>
@@ -50,14 +50,13 @@
           <%= link_to "全てのブックマークを見る>", bookmarks_user_path(@user) %>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-3">
         <% @bookmarks.each do |bookmark| %>
           <div class="col-4">
             <%= link_to coordinate_path(bookmark.coordinate) do %>
               <%= image_tag bookmark.coordinate.get_coordinate_image(170,230) %><br>
             <% end %>
-            <%= link_to bookmark.coordinate.user.name %><br>
-            <%= link_to bookmark.coordinate.style_i18n %>
+            <%= link_to bookmark.coordinate.user.name %>
           </div>
         <% end %>
       </div>
