--- a/app/views/public/coordinates/show.html.erb
+++ b/app/views/public/coordinates/show.html.erb
@@ -5,7 +5,7 @@
       <div class="d-flex align-items-center m-3">
         <h2 class="font-weight-bold bg-light px-3 mr-3">コーディネート詳細</h2>
         <div id="bookmark_btn_<%= @coordinate.id %>" class="mr-5">
-          <%= render "public/bookmarks/btn", coordinate: @coordinate %>
+          <%= render "public/bookmarks/btn" %>
         </div>
         <% if @coordinate.user == current_user %>
           <%= link_to "コーディネート編集", edit_coordinate_path(@coordinate), class: "btn btn-success mr-3" %>
