--- a/app/views/public/coordinates/_button.html.erb
+++ b/app/views/public/coordinates/_button.html.erb
@@ -1,6 +1,6 @@
 <div class="col-3 d-flex flex-column mt-5">
   <% Coordinate.styles_i18n.values.each do |style| %>
-    <%= link_to coordinates_path(style: style), class: "btn btn-primary btn-lg mb-3" do %>
+    <%= link_to random_coordinates_path(style: style), class: "btn btn-primary btn-lg mb-3" do %>
       <%= style %><br>ランダム
     <% end %>
   <% end %>
