--- a/app/views/admin/coordinates/show.html.erb
+++ b/app/views/admin/coordinates/show.html.erb
@@ -1,51 +1,5 @@
 <div class="container my-5">
   <div class="row">
-    <div class="col-3 d-flex flex-column">
-      <% if user_signed_in? %>
-        <%= render 'public/coordinates/button' %>
-        <% if @coordinate.user == current_user %>
-          <%= link_to "コーディネート編集", edit_coordinate_path(@coordinate), class: "btn btn-success btn-lg mb-3" %>
-          <%= link_to "コーディネートを削除", coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger btn-lg" %>
-        <% end %>
-      <% elsif admin_signed_in? %>
-        <%= link_to "投稿を削除", admin_coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger btn-lg" %>
-      <% end %>
-    </div>
-    <div class="col">
-      <div class="row my-3">
-        <h2 class="bg-light px-3">コーディネート詳細</h2>
-      </div>
-      <div class="row">
-        <div class="col-5 d-flex justify-content-center">
-          <%= image_tag @coordinate.get_coordinate_image(420,560) %>
-        </div>
-        <div class="col-7">
-          <div class="row mt-3">
-            <div class="col-md-4 text-center border border-dark rounded">ニックネーム</div>
-            <div class="col-md-7 offset-md-1 text-center border border-dark rounded"><%= @coordinate.user.name %></div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-md-4 text-center border border-dark rounded">スタイル</div>
-            <div class="col-md-7 offset-md-1 text-center border border-dark rounded"><%= @coordinate.style_i18n %></div>
-          </div>
-          <div class="row">
-            <div class="col-4 text-center border border-dark rounded mt-3">紹介</div>
-            <div class="col-12 mt-3 border border-dark rounded" style="height: 250px">
-              <p><%= @coordinate.introduction %></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4 text-center border border-dark rounded mt-3">タグ</div>
-            <div class="col-12 mt-3">
-              <% @tags.each do |tag| %>
-                <span class="badge badge-secondary">
-                  <%= tag.name %>
-                </span>
-              <% end %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render 'public/coordinates/show', coordinate: @coordinate, tags: @tags %>
   </div>
 </div>
