--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
-    <h2 class="bg-light d-inline-block px-3 my-3">会員情報詳細</h2>
+    <div class="col-3 my-3">
+      <h2 class="bg-light d-inline-block px-3 my-3">会員情報詳細</h2>
+    </div>
   </div>
   <%= form_with model: @user, url: admin_user_path do |f| %>
   <div class="col-md-9 offset-md-1 my-3">
@@ -39,18 +41,17 @@
     <div class="d-flex justify-content-between my-3">
       <h3 class="bg-light px-3">投稿一覧</h3>
       <div class="d-flex align-items-center">
-        <!-- 対象ユーザーの投稿一覧のリンク　-->
-        <%= link_to "全ての投稿を見る>" %>
+        <%= link_to "全ての投稿を見る>", admin_coordinates_path(user_id: @user.id) %>
       </div>
     </div>
     <div class="row mt-3">
       <% @coordinates.limit(6).each do |coordinate| %>
-      <div class="col-2">
-        <%= link_to admin_coordinate_path(coordinate) do %>
-          <%= image_tag coordinate.get_coordinate_image(170,230) %>
-        <% end %>
-      </div>
-    <% end %>
+        <div class="col-2">
+          <%= link_to admin_coordinate_path(coordinate) do %>
+            <%= image_tag coordinate.get_coordinate_image(170,230) %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
