--- a/app/views/public/coordinates/_show.html.erb
+++ b/app/views/public/coordinates/_show.html.erb
@@ -1,10 +1,12 @@
 <div class="col">
   <div class="d-flex align-items-center m-3">
-    <h2 class="font-weight-bold bg-light px-3 mr-3">コーディネート詳細</h2>
-    <div id="bookmark_btn_<%= coordinate.id %>" class="mr-5">
-      <%= render "public/bookmarks/btn", coordinate: coordinate %>
-    </div>
-    <% if coordinate.user == current_user %>
+    <h3 class="font-weight-bold bg-light px-3 mr-3">コーディネート詳細</h3>
+    <% if admin_signed_in? %>
+      <%= link_to "投稿を削除", admin_coordinate_path(@coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger btn-lg" %>
+    <% elsif coordinate.user == current_user %>
+      <div id="bookmark_btn_<%= coordinate.id %>" class="mr-5">
+        <%= render "public/bookmarks/btn", coordinate: coordinate %>
+      </div>
       <%= link_to "コーディネート編集", edit_coordinate_path(coordinate), class: "btn btn-success mr-3" %>
       <%= link_to "コーディネート削除", coordinate_path(coordinate), method: :delete, data: {confirm: "本当に削除しますか？"}, class: "btn btn-danger" %>
     <% end %>
