--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
   <body class="d-flex flex-column min-vh-100">
     <%= render 'layouts/header' %>
     <main>
-      <p><%= notice %></p>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
