--- a/app/views/public/coordinates/index.html.erb
+++ b/app/views/public/coordinates/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<div class="container">
   <div class="row">
     <%= render 'public/coordinates/button' %>
     <%= render 'public/coordinates/index', user: @user, coordinates: @coordinates %>
