--- a/app/views/public/coordinates/_show.html.erb
+++ b/app/views/public/coordinates/_show.html.erb
@@ -38,7 +38,7 @@
           <div class="d-flex flex-wrap">
             <% tags.each do |tag| %>
               <h5><span class="badge badge-secondary mr-2 mb-2">
-                <%= link_to "#{tag.name}(#{tag.taggings_count})", coordinates_path(tag_name: tag.name), class: "text-white" %>
+                <%= link_to "#{tag.name}(#{Coordinate.tagged_with(tag.name).published.count})", coordinates_path(tag_name: tag.name), class: "text-white" %>
               </span></h5>
             <% end %>
           </div>
