--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-10 my-3">
+    <div class="col-10">
       <h1 class="bg-light d-inline-block px-3">会員一覧</h1>
     </div>
-    <div class="col-md-9 offset-md-1">
+    <div class="col-md-9 offset-md-1 my-3">
       <table class="table">
         <thead class="bg-light">
           <tr>
