--- a/app/views/public/coordinates/new.html.erb
+++ b/app/views/public/coordinates/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-1 my-3">
-      <h2 class="bg-light d-inline-block px-3">コーディネート投稿</h2>
+      <h2 class="bg-light d-inline-block px-3">コーディネート新規投稿</h2>
     </div>
   </div>
   <%= form_with model: @coordinate do |f| %>
