[Update] Adminトップページの変更

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
               <%= link_to "投稿一覧", admin_coordinates_path, class: "nav-link text-light btn btn-secondary" %>
             </li>
             <li class="mr-3">
-              <%= link_to "会員一覧", admin_path, class: "nav-link text-light btn btn-secondary" %>
+              <%= link_to "会員一覧", admin_users_path, class: "nav-link text-light btn btn-secondary" %>
             </li>
             <li>
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link text-light btn btn-secondary" %>
