--- a/app/views/public/coordinates/_index.html.erb
+++ b/app/views/public/coordinates/_index.html.erb
@@ -1,5 +1,5 @@
 <div class="col">
-  <div class="row m-3 d-flex justify-content-between">
+  <div class="row mx-3">
     <% if admin_signed_in? %>
       <h3>投稿一覧</h3>
     <% else %>
@@ -10,12 +10,17 @@
       <% else %>
         <h3 class="font-weight-bold bg-light px-3">コーディネート一覧</h3>
       <% end %>
-      <div class="btn-group" role="group">
-        <% Coordinate.styles_i18n.values.each do |style| %>
-          <%= link_to style, coordinates_path(style: style), class: "btn btn-secondary pt-2" %>
-        <% end %>
-      </div>
     <% end %>
+  </div>
+  <div class="d-flex justify-content-end">
+    <div class="btn-group" role="group">
+      <% Coordinate.styles_i18n.values.each do |style| %>
+        <%= link_to style, coordinates_path(style: style), class: "btn btn-secondary" %>
+      <% end %>
+    </div>
+    <div>
+      <%= link_to "リセット", coordinates_path, class: "btn btn-success mx-3" %>
+    </div>
   </div>
   <div class="row">
     <% coordinates.each do |coordinate| %>
