--- a/app/views/public/users/bookmarks.html.erb
+++ b/app/views/public/users/bookmarks.html.erb
@@ -1,28 +1,34 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
-      <div class="row m-3">
-        <h2 class="bg-light px-3">ブックマーク一覧</h2>
-        <!-- ブックマークからランダムのボタン -->
-      </div>
-      <div class="row mx-3">
-        <% @bookmark_coordinates.each do |coordinate| %>
-          <div class="col-2 m-3">
-            <div class="d-flex flex-row">
-              <%= link_to coordinate_path(coordinate) do %>
-                <%= image_tag coordinate.get_coordinate_image(150,200) %>
-              <% end %>
-              <div id="bookmark_btn_<%= coordinate.id %>" class="ml-2">
-                <%= render "public/bookmarks/btn", coordinate: coordinate %>
+      <% unless current_user.bookmarks.present? %>
+        <h1>ブックマークはまだありません</h1>
+      <% else %>
+        <div class="row m-3 d-flex justify-content-between">
+          <h2 class="bg-light p-2">ブックマーク一覧</h2>
+          <%= link_to random_coordinates_path(my: "bookmarks"), class: "btn btn-info" do %>
+            マイブックマーク<br>ランダム
+          <% end %>
+        </div>
+        <div class="row mx-3">
+          <% @bookmark_coordinates.each do |coordinate| %>
+            <div class="col-2 m-3">
+              <div class="d-flex flex-row">
+                <%= link_to coordinate_path(coordinate) do %>
+                  <%= image_tag coordinate.get_coordinate_image(150,200) %>
+                <% end %>
+                <div id="bookmark_btn_<%= coordinate.id %>" class="ml-2">
+                  <%= render "public/bookmarks/btn", coordinate: coordinate %>
+                </div>
               </div>
+              <div><%= link_to coordinate.user.name, user_path(coordinate.user) %></div>
             </div>
-            <div><%= link_to coordinate.user.name, user_path(coordinate.user) %></div>
-          </div>
-        <% end %>
-      </div>
-      <div class="row">
-        <%= paginate @bookmark_coordinates %>
-      </div>
+          <% end %>
+        </div>
+        <div class="row">
+          <%= paginate @bookmark_coordinates %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
