--- a/app/views/public/users/bookmarks.html.erb
+++ b/app/views/public/users/bookmarks.html.erb
@@ -1,15 +1,15 @@
 <div class="container my-5">
   <div class="row">
     <div class="col">
+      <div class="row m-3 d-flex justify-content-between">
+        <h2 class="bg-light p-2">ブックマーク一覧</h2>
+        <%= link_to random_coordinates_path(my: "bookmarks"), class: "btn btn-info" do %>
+          マイブックマーク<br>ランダム
+        <% end %>
+      </div>
       <% unless current_user.bookmarks.present? %>
-        <h1>ブックマークはまだありません</h1>
+        <h1 class="m-3">ブックマークはまだありません</h1>
       <% else %>
-        <div class="row m-3 d-flex justify-content-between">
-          <h2 class="bg-light p-2">ブックマーク一覧</h2>
-          <%= link_to random_coordinates_path(my: "bookmarks"), class: "btn btn-info" do %>
-            マイブックマーク<br>ランダム
-          <% end %>
-        </div>
         <div class="row mx-3">
           <% @bookmark_coordinates.each do |coordinate| %>
             <div class="col-2 m-3">
